toolbars below content: urlbarview alignment fixes and pref to move tabs
When urlbar is open the panel input-container height changes based on
whether or not go-button is shown. Add a pseudo-element at the end which
has uses the same height value as go-button would.

In addition, this patch adds a pref
userchrome.toolbars-below-content.tabs-at-bottom.enabled that can be
used to make tabs as the bottom-most toolbar.

--- a/chrome/toolbars_below_content_v2.css
+++ b/chrome/toolbars_below_content_v2.css
@@ -1,7 +1,10 @@
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/toolbars_below_content_v2.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
-/* This requires Firefox 133 */
+/* This requires Firefox 133
+ * By default tabs will be the top-most toolbar, but you can set the following pref to move them to bottom:
+ * userchrome.toolbars-below-content.tabs-at-bottom.enabled
+ */
 
 #navigator-toolbox{
   display: contents;
@@ -21,5 +24,15 @@ See the above repository for updates as well as full license text. */
     flex-direction: column-reverse !important;
     transform: translateY(calc(var(--urlbar-container-height) - 100%));
   }
+  #urlbar[breakout-extend]:not([usertyping]) > .urlbar-input-container::after{
+    display: flex;
+    content: "";
+    height: calc(var(--urlbar-min-height) - 2px - 2 * var(--urlbar-container-padding));
+  }
   .urlbarView-body-inner{ border-top-style: none !important; }
+}
+@media (-moz-bool-pref: "userchrome.toolbars-below-content.tabs-at-bottom.enabled"){
+  #TabsToolbar{
+    order: 3
+  }
 }
